<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_choose_dish">ChooseDish</string>
    <string name="tda">The Dinner App</string>
    <string name="sell">The ultimate application for planning your dinnerparty!</string>
    <string name="newDinnerButton">Create a new dinner</string>
    <string name="mainImageDescription">MainImage</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="nrOfGuests">1</string>
    <string name="cost">$127.50</string>
    <string name="desc">Description comes here</string>
	<string name="startDish">Choose appetizer</string>
    <string name="mainDish">Choose main course</string>
	<string name="dessertDish">Choose dessert</string>
    <string name="prepare">Preparation</string>
    <string name="dishPicture">test</string>
	<string name="dishName">Shrimp cocktail</string>
    <string name="ingredients">1kg shrimps\n1 avocado\n1 onion\n100g butter\n</string>
    <string name="howTo">Here is some text on how to prepare a shrimp cocktail bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="i"/>
    <string name="title_ingredients">Ingredients</string>
	
</resources>