<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/howTo"
        android:contentDescription="@string/dishPicture"
        android:src="@drawable/meatballs" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/howTo"
        android:layout_alignTop="@+id/dishImage"
        android:layout_toLeftOf="@+id/dishImage"
        android:text="@string/ingredients"
        android:textSize="15sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howTo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:padding="20dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/howTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dishImage"
        android:layout_margin="15dp"
        android:text="@string/howTo"
        android:textSize="15sp" />

</RelativeLayout>